# EmbeddedController

./: .checkpatch.conf  .clang-format  .clang-format-cc  .clangd  .dir-locals.el  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  BUILD.bazel  CMakeLists.txt  COMMIT-QUEUE.ini  CPPLINT.cfg  DIR_METADATA  FrameworkContributionLicenseAgreement.md  Kconfig  LICENSE  Makefile  Makefile.ide  Makefile.rules  Makefile.toolchain  OWNERS  PRESUBMIT.cfg  README  README.fmap  README.md  common.mk  ec.code-workspace  ec_common.h  ec_console.h  ec_uart.h  firmware_builder.py  merge-conflicts  navbar.md  notes  pylintrc  setup.py  twister  unblocked_terms.txt  west.yml
common/spi/flash_reg/: CMakeLists.txt  Kconfig.module  build.mk  prj.conf  testcase.yaml
zephyr/: .pylintrc  CMakeLists.txt  DIR_METADATA  Kconfig  Kconfig.accelgyro_bmi  Kconfig.accelgyro_icm  Kconfig.adc  Kconfig.ap_hang_detect  Kconfig.ap_power  Kconfig.battery  Kconfig.board_version  Kconfig.body_detection  Kconfig.cbi  Kconfig.cec  Kconfig.charger  Kconfig.chargesplash  Kconfig.console  Kconfig.console_cmd_mem  Kconfig.debug_assert  Kconfig.defaults  Kconfig.defaults-arm  Kconfig.detachable_base  Kconfig.espi  Kconfig.fingerprint  Kconfig.flash  Kconfig.header  Kconfig.host_interface  Kconfig.i2c  Kconfig.ina2xx  Kconfig.init_priority  Kconfig.ioex  Kconfig.keyboard  Kconfig.led  Kconfig.led_dt  Kconfig.mkbp_event  Kconfig.motionsense  Kconfig.panic  Kconfig.pd  Kconfig.pd_console_cmd  Kconfig.pd_discharge  (+46 more)
zephyr/app/: CMakeLists.txt  Kconfig
zephyr/app/ec/: CMakeLists.txt  Kconfig  ec_app_main.c  main.c  main_shim.c
zephyr/cmake/linker/: linker_libraries_template.cmake  target_template.cmake
zephyr/drivers/: CMakeLists.txt  Kconfig
zephyr/drivers/boot_keys/: CMakeLists.txt  Kconfig  boot_keys.c
zephyr/drivers/cros_bbram/: CMakeLists.txt  Kconfig  cros_bbram_it8xxx2.c  cros_bbram_npcx.c
zephyr/drivers/cros_cbi/: CMakeLists.txt  cros_cbi.c  cros_cbi_common.h  cros_cbi_fw_config.c  cros_cbi_ssfc.c  cros_cbi_ssfc.h
zephyr/drivers/cros_displight/: CMakeLists.txt  cros_displight.c
zephyr/drivers/cros_flash/: CMakeLists.txt  Kconfig  cros_flash.c  cros_flash.h  cros_flash_it8xxx2.c  cros_flash_npcx.c  cros_flash_stm32_backend.c  cros_flash_xec.c
zephyr/drivers/cros_kb_raw/: CMakeLists.txt  Kconfig  cros_kb_raw_ite.c  cros_kb_raw_npcx.c  cros_kb_raw_xec.c
zephyr/drivers/cros_kblight/: CMakeLists.txt  pwm_kblight.c
zephyr/drivers/cros_led/: CMakeLists.txt  led.h  led_gpio.c  led_gpio.h  led_policy.c  led_pwm.c  led_pwm.h
zephyr/drivers/cros_rtc/: CMakeLists.txt  Kconfig  cros_rtc_npcx.c  cros_rtc_xec.c  nxp_rtc_pcf85063a.c  nxp_rtc_pcf85063a.h  renesas_rtc_idt1337ag.c  renesas_rtc_idt1337ag.h
zephyr/drivers/cros_shi/: CMakeLists.txt  Kconfig  cros_shi_it8xxx2.c  cros_shi_npcx.c
zephyr/drivers/cros_system/: CMakeLists.txt  Kconfig  cros_system_it8xxx2.c  cros_system_native_posix.c  cros_system_npcx.c  cros_system_stm32.c  cros_system_xec.c
zephyr/drivers/cros_tabletmode_interrupt/: CMakeLists.txt  Kconfig  tabletmode_interrupt.c
zephyr/drivers/dsp_comms/: .clang-format  CMakeLists.txt  Kconfig  Kconfig.client  Kconfig.service
zephyr/drivers/fingerprint/: CMakeLists.txt  Kconfig  fingerprint_sensor_sim.c  fingerprint_sensor_sim.h  fpc1025.c  fpc1025.h  fpc1025_pal.c  fpc1025_pal.h  fpc1025_private.h
zephyr/drivers/keyboard_factory_test/: CMakeLists.txt  Kconfig  keyboard_factory_test.c
zephyr/drivers/keyboard_input/: CMakeLists.txt  Kconfig  col_gpio_drive.c  keyboard_input.c
zephyr/drivers/one_wire_uart/: CMakeLists.txt  Kconfig  hid_over_i2c_target.c  keyboard.c  one_wire_uart.c  tablet.c
zephyr/drivers/prochot_vcmp/: CMakeLists.txt  Kconfig  prochot_vcmp.c
zephyr/drivers/runtime_keys/: CMakeLists.txt  Kconfig  runtime_keys.c
zephyr/drivers/sm5803/: Kconfig.sm5803
zephyr/drivers/usbc/: CMakeLists.txt  Kconfig  Kconfig.pdc_trace  intel_altmode.c  pdc_ccg8.c  pdc_rts545x.c  pdc_rts54xx.c  pdc_tps6699x.c  tps6699x.json  tps6699x_19.8.0.json  tps6699x_19.9.0.json  tps6699x_cmd.c  tps6699x_cmd.h  tps6699x_fwup.c  tps6699x_reg.h  ucsi_v3.c
zephyr/drivers/vivaldi_kbd/: CMakeLists.txt  Kconfig  vivaldi_kbd.c
zephyr/dts/: it8xxx2_emul.dts  mchp_emul.dts  npcx_emul.dts  usbc-policy.dtsi
zephyr/dts/bindings/: vendor-prefixes.txt
zephyr/dts/board-overlays/: native_posix.dts  native_sim.dts
zephyr/emul/: CMakeLists.txt  Kconfig  Kconfig.clock_control  Kconfig.gpio_controller_mock  Kconfig.i2c_mock  Kconfig.isl923x  Kconfig.lis2dw12  Kconfig.ln9310  Kconfig.sm5803  Kconfig.sn5s330  Kconfig.tcpci  emul_amd_fp6.c  emul_anx7452.c  emul_bb_retimer.c  emul_bma255.c  emul_bma4xx.c  emul_bmi.c  emul_bmi160.c  emul_bmi260.c  emul_bmi3xx.c  emul_charger.c  emul_clock_control.c  emul_common_i2c.c  emul_flash.c  emul_fpc1025.c  emul_icm42607.c  emul_isl923x.c  emul_isl9241.c  emul_kb8010.c  emul_kb_raw.c  emul_ktu1125.c  emul_lis2dw12.c  emul_ln9310.c  emul_lsm6dso.c  emul_nx20p348x.c  emul_pct2075.c  emul_pdc_pdo.c  emul_pi3usb9201.c  emul_ppm_driver.c  emul_ps8743.c  (+25 more)
zephyr/emul/include/: flash_chip.h  flash_chip_native_posix.h  pwm_mock.h  tach_mock.h  vcmp_mock.h
zephyr/emul/retimer/: CMakeLists.txt  Kconfig  emul_anx7483.c  emul_ps8811.c
zephyr/emul/tcpc/: CMakeLists.txt  Kconfig  emul_anx7447.c  emul_nct38xx.c  emul_ps8xxx.c  emul_rt1715.c  emul_rt1718s.c  emul_tcpci.c  (+8 more)
zephyr/fake/: CMakeLists.txt  Kconfig  system_fake.c
zephyr/linker/: CMakeLists.txt  end-of-ram.ld  fixed-sections.ld  image_size.ld  iram_text.ld  iterables-ram.ld  iterables-rom.ld  mchp-xec-lfw.ld  npcx-lfw.ld
zephyr/mock/: CMakeLists.txt  Kconfig  ap_power_events.c  chipset_api.c  isl923x.c  power.c  power_signals.c
zephyr/program/: .pylintrc
zephyr/projects/: .pylintrc
zephyr/scripts/: chip_id.py  cme.py  firmware_builder_lib.py  led_policy.py  named_gpios.py  util.py
zephyr/shim/: CMakeLists.txt
zephyr/subsys/: CMakeLists.txt  Kconfig
zephyr/test/: .pylintrc  unblocked_terms.txt
zephyr/zmake/: .flake8  .pylintrc  .vpython3  README.md  bazel_main.py  pre-upload.sh  run_tests.sh  setup.py
(+11850 files in other folders)
