# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load(
    "@cros_firmware//platform/rules_cros_firmware/cros_firmware:ec.bzl",
    "ec_binary",
)

ec_binary(
    name = "adlrvp_mchp",
)

ec_binary(
    name = "adlrvp_npcx",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "brya",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "craask",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "crystaldrift",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "dev-posix",
)

ec_binary(
    name = "evoker",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "frostflow",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "geralt",
)

ec_binary(
    name = "gothrax",
)

ec_binary(
    name = "herobrine",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "hoglin",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "it8xxx2_evb",
)

ec_binary(
    name = "joxer",
)

ec_binary(
    name = "kingler",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "krabby",
)

ec_binary(
    name = "lazor",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "magikarp",
)

ec_binary(
    name = "markarth",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "minimal-it8xxx2",
)

ec_binary(
    name = "minimal-npcx9",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "minimal-posix",
)

ec_binary(
    name = "mtlrvpp_mchp",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "mtlrvpp_npcx",
)

ec_binary(
    name = "myst",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "nereid",
)

ec_binary(
    name = "nereid_cx",
)

ec_binary(
    name = "nivviks",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "npcx7",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "npcx9",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "pujjo",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "rex",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "rex-ish-ec",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "screebo",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "skyrim",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "starmie",
)

ec_binary(
    name = "steelix",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "tentacruel",
)

ec_binary(
    name = "uldren",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "villager",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "voltorb",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "winterhold",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "xivu",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "xivur",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "yaviks",
)

ec_binary(
    name = "yavilla",
)

ec_binary(
    name = "zoglin",
    extra_modules = ["cmsis"],
)

ec_binary(
    name = "zombie",
    extra_modules = ["cmsis"],
)
