# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load(
    "@cros_firmware//platform/ec/bazel:all_targets.generated.bzl",
    "all_targets",
)
load(
    "@cros_firmware//platform/ec/bazel:legacy_ec.bzl",
    "legacy_ec",
)

legacy_ec.ec_srcs()

all_targets()
